# sem11-computer-graphics-hw03

./: .gitignore  CMakeLists.txt  gbuf.frag  gbuf.vert  main.cpp  main.frag  main.vert  model.blend  model.gltf  routine.hpp  screen.frag  screen.vert
chess/: chess.gltf
